{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 120,
  "lineage": "5e3b3332-f9c4-1877-1430-8310c460aee8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web_port_80_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:listener/app/bootcamp-prod-web-alb/e858bd7b8a1c2675/c318ec545faf2afa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:listener/app/bootcamp-prod-web-alb/e858bd7b8a1c2675/c318ec545faf2afa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:loadbalancer/app/bootcamp-prod-web-alb/e858bd7b8a1c2675",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_alb",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.bastion-public-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:network-acl/acl-094ce088eb2428474",
            "default_network_acl_id": "acl-094ce088eb2428474",
            "egress": [],
            "id": "acl-094ce088eb2428474",
            "ingress": [],
            "owner_id": "497664637367",
            "subnet_ids": [
              "subnet-00cd168b9295b4edb",
              "subnet-0150f64267f1ce739",
              "subnet-019d17001eecdaac6",
              "subnet-026f0d8c1c7618db5",
              "subnet-063c5c7230cee42df",
              "subnet-072dc204aefbb6c43"
            ],
            "tags": {
              "Name": "default_nacl_do_not_use"
            },
            "tags_all": {
              "Name": "default_nacl_do_not_use"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:route-table/rtb-0478a3cad875d9923",
            "default_route_table_id": "rtb-0478a3cad875d9923",
            "id": "rtb-0478a3cad875d9923",
            "owner_id": "497664637367",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "default_route_table_do_not_use"
            },
            "tags_all": {
              "Name": "default_route_table_do_not_use"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:security-group/sg-06327383bf1154022",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06327383bf1154022",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "497664637367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default_security_group_do_not_use"
            },
            "tags_all": {
              "Name": "default_security_group_do_not_use"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a08b613a18ef7854",
            "arn": "arn:aws:ec2:eu-north-1:497664637367:elastic-ip/eipalloc-0a08b613a18ef7854",
            "domain": "vpc",
            "id": "eipalloc-0a08b613a18ef7854",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-50-153-123.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.153.123",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat_gateway_eip"
            },
            "tags_all": {
              "Name": "nat_gateway_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07c8c1b18ca66bb07",
            "arn": "arn:aws:ec2:eu-north-1:497664637367:instance/i-0dc0c2f2f5a9e0985",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-0dc0c2f2f5a9e0985",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "JosephKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f76672c9cb60d81",
            "private_dns": "ip-10-0-3-16.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.16",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-north-1:497664637367:key/c3b4a10d-873f-4a3d-b0ba-e53872fc9f46",
                "throughput": 125,
                "volume_id": "vol-03e154802603f281c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00cd168b9295b4edb",
            "tags": {
              "Name": "app-server"
            },
            "tags_all": {
              "Name": "app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac4f0f9549a574e1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.server_profile",
            "aws_iam_role.server_role",
            "aws_security_group.web-app-security-group",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.app-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07c8c1b18ca66bb07",
            "arn": "arn:aws:ec2:eu-north-1:497664637367:instance/i-0ad0b8890abc0ac59",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "server_profile",
            "id": "i-0ad0b8890abc0ac59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "JosephKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c1df1e342fe066d",
            "private_dns": "ip-10-0-1-153.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.153",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-north-1:497664637367:key/c3b4a10d-873f-4a3d-b0ba-e53872fc9f46",
                "throughput": 125,
                "volume_id": "vol-09d141ff57cca48b8",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019d17001eecdaac6",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ac4f0f9549a574e1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.server_profile",
            "aws_iam_role.server_role",
            "aws_security_group.web-app-security-group",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.web-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:internet-gateway/igw-068dc50db5ce62806",
            "id": "igw-068dc50db5ce62806",
            "owner_id": "497664637367",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:loadbalancer/app/bootcamp-prod-web-alb/e858bd7b8a1c2675",
            "arn_suffix": "app/bootcamp-prod-web-alb/e858bd7b8a1c2675",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bootcamp-prod-web-alb-1699184747.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:loadbalancer/app/bootcamp-prod-web-alb/e858bd7b8a1c2675",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bootcamp-prod-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-097aa15938cbb976e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-026f0d8c1c7618db5"
              },
              {
                "subnet_id": "subnet-072dc204aefbb6c43"
              }
            ],
            "subnets": [
              "subnet-026f0d8c1c7618db5",
              "subnet-072dc204aefbb6c43"
            ],
            "vpc_id": "vpc-01b4e1828386c0dec",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.web-elb-security-group",
            "aws_subnet.bastion-public-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:targetgroup/bootcamp-prod-app-tg/6c19a0c231bc83e6",
            "arn_suffix": "targetgroup/bootcamp-prod-app-tg/6c19a0c231bc83e6",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:targetgroup/bootcamp-prod-app-tg/6c19a0c231bc83e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bootcamp-prod-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app_alb_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:targetgroup/bootcamp-prod-app-tg/6c19a0c231bc83e6-20240812185643854600000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:targetgroup/bootcamp-prod-app-tg/6c19a0c231bc83e6",
            "target_id": "i-0dc0c2f2f5a9e0985"
          },
          "dependencies": [
            "aws_iam_instance_profile.server_profile",
            "aws_iam_role.server_role",
            "aws_instance.app-server",
            "aws_lb_target_group.app_target_group",
            "aws_security_group.web-app-security-group",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.app-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_alb_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:targetgroup/bootcamp-prod-app-tg/6c19a0c231bc83e6-20240812185747803400000014",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:497664637367:targetgroup/bootcamp-prod-app-tg/6c19a0c231bc83e6",
            "target_id": "i-0ad0b8890abc0ac59"
          },
          "dependencies": [
            "aws_iam_instance_profile.server_profile",
            "aws_iam_role.server_role",
            "aws_instance.web-server",
            "aws_lb_target_group.app_target_group",
            "aws_security_group.web-app-security-group",
            "aws_security_group.web-elb-security-group",
            "aws_subnet.web-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a08b613a18ef7854",
            "association_id": "eipassoc-0be7159e223587a90",
            "connectivity_type": "public",
            "id": "nat-078966ffb1300407e",
            "network_interface_id": "eni-02bb093999d005dc8",
            "private_ip": "10.0.0.213",
            "public_ip": "13.50.153.123",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-026f0d8c1c7618db5",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "app_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:network-acl/acl-0dd130006b7e67484",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0dd130006b7e67484",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "497664637367",
            "subnet_ids": [
              "subnet-00cd168b9295b4edb",
              "subnet-0150f64267f1ce739"
            ],
            "tags": {
              "Name": "bootcamp-app-private-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-nacl"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.app-private-a",
            "aws_subnet.app-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "bastion-public-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:network-acl/acl-06636925b32b8020c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06636925b32b8020c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "497664637367",
            "subnet_ids": [
              "subnet-072dc204aefbb6c43"
            ],
            "tags": {
              "Name": "bootcamp-bastion-public-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-nacl"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.bastion-public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nacl_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:network-acl/acl-02ef7cfa17b22b1c6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02ef7cfa17b22b1c6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "497664637367",
            "subnet_ids": [
              "subnet-026f0d8c1c7618db5"
            ],
            "tags": {
              "Name": "bootcamp-public-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-public-nacl"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "web_private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:network-acl/acl-0aa8ee509f596e0a0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0aa8ee509f596e0a0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "497664637367",
            "subnet_ids": [
              "subnet-019d17001eecdaac6",
              "subnet-063c5c7230cee42df"
            ],
            "tags": {
              "Name": "bootcamp-web-private-nacl"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-nacl"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.web-private-a",
            "aws_subnet.web-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:route-table/rtb-0db10a3869e17a3a6",
            "id": "rtb-0db10a3869e17a3a6",
            "owner_id": "497664637367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-078966ffb1300407e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-app-private-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:route-table/rtb-0b1e982927a41dd55",
            "id": "rtb-0b1e982927a41dd55",
            "owner_id": "497664637367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068dc50db5ce62806",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-bastion-public-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:route-table/rtb-01b312225c1d0d396",
            "id": "rtb-01b312225c1d0d396",
            "owner_id": "497664637367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068dc50db5ce62806",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-public-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:route-table/rtb-0296ae10d70f4dc88",
            "id": "rtb-0296ae10d70f4dc88",
            "owner_id": "497664637367",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-078966ffb1300407e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bootcamp-web-private-route-table"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0598ba32276da79a6",
            "route_table_id": "rtb-0db10a3869e17a3a6",
            "subnet_id": "subnet-00cd168b9295b4edb"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.app-private-route-table",
            "aws_subnet.app-private-a",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004597edfcb963c48",
            "route_table_id": "rtb-0db10a3869e17a3a6",
            "subnet_id": "subnet-0150f64267f1ce739"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.app-private-route-table",
            "aws_subnet.app-private-b",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d23767946d3ad63",
            "route_table_id": "rtb-0b1e982927a41dd55",
            "subnet_id": "subnet-072dc204aefbb6c43"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.bastion-public-route-table",
            "aws_subnet.bastion-public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0479e52b0aab62092",
            "route_table_id": "rtb-01b312225c1d0d396",
            "subnet_id": "subnet-026f0d8c1c7618db5"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e5d500a1b9e409f",
            "route_table_id": "rtb-0296ae10d70f4dc88",
            "subnet_id": "subnet-019d17001eecdaac6"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.web-private-route-table",
            "aws_subnet.public-a",
            "aws_subnet.web-private-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-private-subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e700618a82cb2171",
            "route_table_id": "rtb-0296ae10d70f4dc88",
            "subnet_id": "subnet-063c5c7230cee42df"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat_a",
            "aws_route_table.web-private-route-table",
            "aws_subnet.public-a",
            "aws_subnet.web-private-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:security-group/sg-0ce7113b773b42375",
            "description": "Allowing Inbound Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce7113b773b42375",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 22 Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bootcamp-bastion-public-security-group",
            "name_prefix": "",
            "owner_id": "497664637367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-public-security-group"
            },
            "tags_all": {
              "Name": "bastion-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-app-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:security-group/sg-0ac4f0f9549a574e1",
            "description": "Allowing Web and App Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac4f0f9549a574e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 22 Inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allowing port 443 Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097aa15938cbb976e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allowing port 80 Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-097aa15938cbb976e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bootcamp-web-app-private-security-group",
            "name_prefix": "",
            "owner_id": "497664637367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp-web-private-security-group"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-elb-security-group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-elb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:security-group/sg-097aa15938cbb976e",
            "description": "Allowing Web Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing All Traffic Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097aa15938cbb976e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 443 Inbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowing port 80 Inbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bootcamp-web-elb-public-security-group",
            "name_prefix": "",
            "owner_id": "497664637367",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bootcamp-web-elb-public-security-group"
            },
            "tags_all": {
              "Name": "bootcamp-web-elb-public-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:subnet/subnet-00cd168b9295b4edb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cd168b9295b4edb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497664637367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-app-private-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-subnetA"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:subnet/subnet-0150f64267f1ce739",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0150f64267f1ce739",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497664637367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-app-private-subnetB"
            },
            "tags_all": {
              "Name": "bootcamp-app-private-subnetB"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:subnet/subnet-072dc204aefbb6c43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072dc204aefbb6c43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "497664637367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-bastion-public-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-bastion-public-subnetA"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:subnet/subnet-026f0d8c1c7618db5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026f0d8c1c7618db5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "497664637367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-public-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-public-subnetA"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:subnet/subnet-019d17001eecdaac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019d17001eecdaac6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497664637367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-web-private-subnetA"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-subnetA"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:subnet/subnet-063c5c7230cee42df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063c5c7230cee42df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497664637367",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bootcamp-web-private-subnetB"
            },
            "tags_all": {
              "Name": "bootcamp-web-private-subnetB"
            },
            "vpc_id": "vpc-01b4e1828386c0dec"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:497664637367:vpc/vpc-01b4e1828386c0dec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094ce088eb2428474",
            "default_route_table_id": "rtb-0478a3cad875d9923",
            "default_security_group_id": "sg-06327383bf1154022",
            "dhcp_options_id": "dopt-0018292de72c0199a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b4e1828386c0dec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0478a3cad875d9923",
            "owner_id": "497664637367",
            "tags": {
              "Name": "bootcamp_vpc"
            },
            "tags_all": {
              "Name": "bootcamp_vpc"
            }
          }
        }
      ]
    }
  ]
}